DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2007-03-03 patrick  Allow callers of vpr::InetAddr::getAllLocalAddrs() to
                    indicate whether interfaces in the down state should be
                    considered.
                    NEW VERSION: 1.1.43
2007-03-02 patrick  Changed the signature of the read, write, and query methods
                    on I/O classes (vpr::BlockIO, vpr::Socket,
                    vpr::SocketStream, vpr::SocketDatagram, and
                    vpr::SerialPort) to return the result "out the back"
                    instead of through a by-reference parameter.
                    NEW VERSION: 1.1.42
2007-02-13 patrick  Use the Win32 thread and sychronization APIs directly
                    instead of using NSPR.
                    NEW VERSION: 1.1.41
2007-02-13 patrick  Reimplemented vpr::CondVarWin32 using a simpler approach.
                    NEW VERSION: 1.1.40
2007-01-30 patrick  Eliminated the need to set VPR_BASE_DIR on Windows to run
                    applications.
                    NEW VERSION: 1.1.39
2006-12-13 patrick  Replaced integer return codes in vpr::Thread with
                    exceptions.
                    NEW VERSION: 1.1.38
2006-12-11 patrick  Replaced integer return codes in vpr::ThreadKey with
                    exceptions.
                    NEW VERSION: 1.1.37
2006-12-08 patrick  Added Windows-specific threading wrappers and
                    synchronization primitives for use instead of NSPR's
                    equivalent types and functions.
                    NEW VERSION: 1.1.36
2006-10-01 patrick  Changed vpr::System::getenv() and vpr::System::setenv() to
                    return bool instead of vpr::ReturnStatus.
                    NEW VERSION: 1.1.35
2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::Signal.
                    NEW VERSION: 1.1.34