@@ -246,8 +246,12 @@ void ThreadNSPR::startThread()
 
    try
    {
+      emitThreadStart(this);
+
       // --- CALL USER FUNCTOR --- //
       mUserThreadFunctor();
+
+      emitThreadExit(this);
    }
    catch (std::exception& ex)
    {
