@@ -218,8 +218,12 @@ void ThreadWin32::startThread()
 
    try
    {
+      emitThreadStart(this);
+
       // --- CALL USER FUNCTOR --- //
       mUserThreadFunctor();
+
+      emitThreadExit(this);
    }
    catch (std::exception& ex)
    {
